<resources>
    <string name="app_name">Bigelozidane</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Bigelozidane</string>
    <string name="nav_header_subtitle">BigelowInventions.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_about">About</string>
    <string name="menu_links">Links</string>
    <string name="menu_translator">Translator</string>
    <string name="encoded_text">Encoded Text</string>
    <string name="plain_text">Plain Text</string>
    <string name="about_text">
        Bigelozidane is the first C++ program that I wrote when I was roughly 16 years old and has now been converted to an Android app. It\'s essentially a simple substitution cipher that takes plain text and encodes it so other people can\'t read it.\n\nAlthough decoding was not a part of the original program, it was my intention to add that functionality at some point. It only took 20+ years. 😎\n\nImportant Note:\nPlease keep in mind that this is for entertainment purposes only. Don\'t encode any important information because substitution ciphers are easy to crack for experienced cryptographers.
    </string>
    <string name="links_text">Links</string>
    <string name="menu_encoder">Encoder</string>
    <string name="menu_decoder">Decoder</string>
    <string name="translate_button">Translate</string>
</resources>