<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_encoder"
            android:icon="@drawable/baseline_enhanced_encryption_24"
            android:title="@string/menu_encoder" />
        <item
            android:id="@+id/nav_decoder"
            android:icon="@drawable/baseline_vpn_key_24"
            android:title="@string/menu_decoder" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/baseline_auto_stories_24"
            android:title="@string/menu_about" />
        <item
            android:id="@+id/nav_links"
            android:icon="@drawable/baseline_checklist_24"
            android:title="@string/menu_links" />
    </group>
</menu>